force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Tax_Registration_Number_Lessor_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Tax_Registration_Number_Lessor_F__c</fullName>
    <formula>leaseworks__Tax_Registration_Number_Lessor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Registration Number (Lessor)</label>
    <type>Text</type>
</CustomField>