force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Total_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Adjustment_Amount__c</fullName>
    <description>Total of all adjustments associated with the invoice</description>
    <inlineHelpText>Total of all adjustments associated with the invoice</inlineHelpText>
    <label>Total Adjustment Amount($)</label>
    <summarizedField>leaseworks__Invoice_Adjustment__c.leaseworks__Adjustment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Invoice_Adjustment__c.leaseworks__Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved, Cancelled-Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Invoice_Adjustment__c.leaseworks__Linked_Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>