force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Total_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Amount_Due__c</fullName>
    <description>Invoice Amount plus taxes and adjustments.</description>
    <formula>leaseworks__Invoiced_Amount_Formula__c +  leaseworks__Tax_Amount_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoice Amount plus taxes and adjustments.</inlineHelpText>
    <label>Total Invoiced Amount($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>