force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Total_Funded_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Funded_Amount__c</fullName>
    <label>Total Funded Amount</label>
    <summarizedField>leaseworks__Funded_WIth__c.leaseworks__Applied_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Funded_WIth__c.leaseworks__Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Funded_WIth__c.leaseworks__Credit_Note__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>