force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Transfer_Balance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transfer_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates the value of the 
&apos;Transfer Balance to Deferral GL Account?&apos; checkbox on the Global Accounting Setup at the time of deferred payment plan approval</description>
    <label>_Transfer Balance?</label>
    <type>Checkbox</type>
</CustomField>