force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Type__c</fullName>
    <formula>text(leaseworks__Invoice_Type__c)  + if(isblank(leaseworks__Monthly_Utilization_Type_F__c)   ,&#39;&#39; , &#39; - &#39; +leaseworks__Monthly_Utilization_Type_F__c  )</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>