force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Withholding_Tax_Amnt__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Withholding_Tax_Amnt__c</fullName>
    <description>Percentage of payment to be withheld for tax purposes under local or international tax rules.</description>
    <formula>leaseworks__Withholding_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Percentage of payment to be withheld for tax purposes under local or international tax rules.</inlineHelpText>
    <label>Withholding Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>