force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Withholding_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Withholding_Tax_Rate__c</fullName>
    <label>_Withholding Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>