force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Y_Hidden_Aircraft__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Aircraft__c</fullName>
    <formula>CASESAFEID(leaseworks__Lease__r.leaseworks__Aircraft__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Aircraft</label>
    <type>Text</type>
</CustomField>