force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Y_Hidden_Asumd_Inv__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Asumd_Inv__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is a Z_Unused field, and It is used to identify the Docgen pdf generated for invoice records.</description>
    <label>_Generate From Docgen</label>
    <type>Checkbox</type>
</CustomField>