force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Y_Hidden_Availed_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Availed_Credit_Amount__c</fullName>
    <inlineHelpText>Amount of credit availed from the selected Credit Noted.</inlineHelpText>
    <label>Z_Unused_2009 Y_Hidden Availed Credit Am</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>