force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Y_Hidden_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Depreciation__c</fullName>
    <formula>0 /*Rent__r.Depreciation_F__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2507 _Depreciation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>