force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Y_Hidden_Invoice_sub_type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Invoice_sub_type__c</fullName>
    <description>subType will be intercompany for Rent and Aircraft MR</description>
    <label>_Invoice Sub Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>