force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Y_Hidden_Rent_Payable_From_Party__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Rent_Payable_From_Party__c</fullName>
    <description>Can have values Lessor/HeadLessor/HeadLessorII</description>
    <label>_Rent Payable From Party</label>
    <length>20</length>
    <type>Text</type>
</CustomField>