force-app/main/default/objects/leaseworks__Invoice__c/fields/leaseworks__Y_Hidden_Rent_payable_To_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Rent_payable_To_Code__c</fullName>
    <description>Field used for validation rule to check if the &apos;Rent payable to&apos; is changed</description>
    <label>_Rent Payable To Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>