force-app/main/default/objects/leaseworks__Invoice__c/fields/MR_Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>MR_Invoice_Name__c</fullName>
    <description>In the case of MR Invoices, determines what the title of the invoice will be.</description>
    <inlineHelpText>In the case of MR Invoices, determines what the title of the invoice will be.</inlineHelpText>
    <label>MR Invoice Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pro_MR_Invoice_Name_Print_Options</valueSetName>
    </valueSet>
</CustomField>