force-app/main/default/objects/leaseworks__Invoice__c/fields/Original_Invoice_Amount_Local__c.field-meta.xml
<CustomField>
    <fullName>Original_Invoice_Amount_Local__c</fullName>
    <description>temp field for dataload review</description>
    <label>Original Invoice Amount Local</label>
    <length>80</length>
    <type>Text</type>
</CustomField>