force-app/main/default/objects/leaseworks__Invoice__c/fields/pro_Aircraft_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>pro_Aircraft_Registration_Number__c</fullName>
    <description>The registration from the aircraft referenced on the contract. Gets populated via a flow whenever an invoice is created.</description>
    <label>Aircraft Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>