force-app/main/default/objects/leaseworks__Invoice__c/fields/pro_Include_Aircraft_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>pro_Include_Aircraft_Registration_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the aircraft registration number is included on generated invoices.</description>
    <label>Include  Aircraft Registration Number?</label>
    <type>Checkbox</type>
</CustomField>