force-app/main/default/objects/leaseworks__Invoice__c/fields/pro_Lessor_Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>pro_Lessor_Tax_Registration_Number__c</fullName>
    <description>Created for customer, to be easily available for DocGen invoice mapping</description>
    <formula>pro_Invoicing_Party__r.leaseworks__Tax_Registration_Number__c</formula>
    <inlineHelpText>This is a copy of the tax registration (VAT) number on the Invoicing Party&apos;s Account</inlineHelpText>
    <label>Lessor Tax Registration No. (Invoicing)</label>
    <type>Text</type>
</CustomField>