force-app/main/default/objects/leaseworks__Invoice__c/fields/pro_Mismatched_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>pro_Mismatched_Bank_Account__c</fullName>
    <formula>IF(
    OR(
        AND(TEXT(leaseworks__Invoice_Category__c) = &quot;Aircraft MR&quot;, leaseworks__Bank_Account__c &lt;&gt; leaseworks__Lease__r.leaseworks__Lessor_Bnk_For_MR__c),
        AND(TEXT(leaseworks__Invoice_Category__c) = &quot;Security Deposit&quot;, leaseworks__Bank_Account__c &lt;&gt; leaseworks__Lease__r.leaseworks__Lessor_Bnk_For_SD__c),
        AND(TEXT(leaseworks__Invoice_Category__c) = &quot;Other&quot;, leaseworks__Bank_Account__c &lt;&gt; leaseworks__Lease__r.leaseworks__Bank_Account_For_Others__c),
        AND(TEXT(leaseworks__Invoice_Category__c) = &quot;Fixed Rent&quot;, leaseworks__Bank_Account__c &lt;&gt; leaseworks__Lease__r.leaseworks__Lesor_Bank_for_Rent__c),
        AND(TEXT(leaseworks__Invoice_Category__c) = &quot;Floating Rent&quot;, leaseworks__Bank_Account__c &lt;&gt; leaseworks__Lease__r.leaseworks__Lesor_Bank_for_Rent__c),
        AND(TEXT(leaseworks__Invoice_Category__c) = &quot;Manual Rent&quot;, leaseworks__Bank_Account__c &lt;&gt; leaseworks__Lease__r.leaseworks__Lesor_Bank_for_Rent__c),
        AND(TEXT(leaseworks__Invoice_Category__c) = &quot;Power By The Hour&quot;, leaseworks__Bank_Account__c &lt;&gt; leaseworks__Lease__r.leaseworks__Lesor_Bank_for_Rent__c),
        AND(TEXT(leaseworks__Invoice_Category__c) = &quot;MR&quot;, leaseworks__Bank_Account__c &lt;&gt; leaseworks__Lease__r.leaseworks__Lessor_Bnk_For_MR__c)
    ),
    true,
    false
)</formula>
    <label>Mismatched Bank Account?</label>
    <type>Checkbox</type>
</CustomField>