force-app/main/default/objects/leaseworks__Invoice__c/fields/pro_Optional_Footer_Note__c.field-meta.xml
<CustomField>
    <fullName>pro_Optional_Footer_Note__c</fullName>
    <description>A note that can optionally be included at the bottom of an invoice. Part of Print Options.</description>
    <label>Optional Footer Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>