force-app/main/default/objects/leaseworks__Invoice__c/fields/RecordIDs_temp__c.field-meta.xml
<CustomField>
    <fullName>RecordIDs_temp__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecordIDs temp</label>
    <type>Text</type>
</CustomField>