force-app/main/default/objects/leaseworks__Invoice__c/fields/Selected_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Selected_Month_Year__c</fullName>
    <description>To get the selected month &amp; year from LWC</description>
    <label>Selected Month &amp; Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>