force-app/main/default/objects/leaseworks__Invoice__c/fields/Y_Hidden_Amount_Bef_Round_Local__c.field-meta.xml
<CustomField>
    <fullName>Y_Hidden_Amount_Bef_Round_Local__c</fullName>
    <label>Z_Unused_2507 {Amount Before Rounding}</label>
    <summarizedField>leaseworks__Invoice_Line_Item__c.Y_Hidden_Amount_Bef_Round_Local__c</summarizedField>
    <summaryForeignKey>leaseworks__Invoice_Line_Item__c.leaseworks__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>