force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Assembly_Utilization.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Assembly_Utilization</fullName>
    <active>false</active>
    <description>Assembly Utilization Invoices</description>
    <label>Assembly MR</label>
</RecordType>