force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Credit_Note.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Credit_Note</fullName>
    <active>false</active>
    <description>Record type for Credit Notes. Credit Notes can be created against Rent, MR and Security Deposit invoices.</description>
    <label>Credit Note</label>
</RecordType>