force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Credit_Note_MR.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Credit_Note_MR</fullName>
    <active>false</active>
    <description>Credit Note MR</description>
    <label>Credit Note MR</label>
</RecordType>