force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Credit_Note_Rent.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Credit_Note_Rent</fullName>
    <active>false</active>
    <description>Credit Note Rent</description>
    <label>Credit Note Rent</label>
</RecordType>