force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Deferred_Sub_Invoice.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Deferred_Sub_Invoice</fullName>
    <active>true</active>
    <description>Record type for sub invoices</description>
    <label>Deferred Sub Invoice</label>
</RecordType>