force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Finance_Lease.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Finance_Lease</fullName>
    <active>false</active>
    <description>Finance Lease Payments</description>
    <label>Finance Lease</label>
</RecordType>