force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Head_Lease_Sub_Lease.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Head_Lease_Sub_Lease</fullName>
    <active>true</active>
    <label>Head Lease/ Sub Lease</label>
</RecordType>