force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Interest.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Interest</fullName>
    <active>true</active>
    <description>Interest Invoice</description>
    <label>Interest</label>
</RecordType>