force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Loan.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Loan</fullName>
    <active>true</active>
    <label>Loan</label>
</RecordType>