force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Manual_MR_Credit_Note.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Manual_MR_Credit_Note</fullName>
    <active>true</active>
    <label>Manual Supplemental Rent Credit Note</label>
</RecordType>