force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Manual_MR_Invoice.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Manual_MR_Invoice</fullName>
    <active>true</active>
    <label>Manual Supplemental Rent Invoice</label>
</RecordType>