force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Monthly_Utilization.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Monthly_Utilization</fullName>
    <active>true</active>
    <description>Monthly Utilization Invoices</description>
    <label>MR</label>
</RecordType>