force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__MR_Reconciliation.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__MR_Reconciliation</fullName>
    <active>true</active>
    <label>MR Reconciliation</label>
</RecordType>