force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Other.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Other</fullName>
    <active>true</active>
    <description>Other Invoices.</description>
    <label>Manual</label>
</RecordType>