force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Rent.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Rent</fullName>
    <active>true</active>
    <description>Rent Invoices</description>
    <label>Rent</label>
</RecordType>