force-app/main/default/objects/leaseworks__Invoice__c/recordTypes/leaseworks__Security_Deposit.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Security_Deposit</fullName>
    <active>true</active>
    <description>Security Deposit Invoices</description>
    <label>Security Deposit</label>
</RecordType>