force-app/main/default/objects/leaseworks__Invoice__c/validationRules/leaseworks__Adjustment_Percentage_Prevent.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Adjustment_Percentage_Prevent</fullName>
    <active>true</active>
    <description>It should prevent negative value beyond -100.</description>
    <errorConditionFormula>AND( 
   !$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
   NOT( 
       ISNULL(leaseworks__Adjustment__c)
   ),
   AND(leaseworks__Adjustment__c &gt; -100, leaseworks__Adjustment__c &lt; -1)
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Adjustment__c</errorDisplayField>
    <errorMessage>Please enter negative value within range -100  to  -1.</errorMessage>
</ValidationRule>