force-app/main/default/objects/leaseworks__Invoice__c/validationRules/leaseworks__ApprovedCreditMemoStatusCannotBeChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ApprovedCreditMemoStatusCannotBeChanged</fullName>
    <active>false</active>
    <description>Deprecated : You cannot the change the status of credit note once its approved</description>
    <errorConditionFormula>/*AND(RecordType.DeveloperName =&#39;Credit_Note&#39;,
				TEXT(PRIORVALUE(Status__c))=&#39;Approved&#39;,TEXT(Status__c)!=&#39;Approved&#39;)*/
				false</errorConditionFormula>
    <errorMessage>You cannot change the status once the Credit Note is Approved</errorMessage>
</ValidationRule>