force-app/main/default/objects/leaseworks__Invoice__c/validationRules/leaseworks__BlockTransactionCurrencyChange.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__BlockTransactionCurrencyChange</fullName>
    <active>true</active>
    <description>This field is system-driven and cannot be updated manually.</description>
    <errorConditionFormula>AND(
!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,ISCHANGED( leaseworks__Transaction_Currency__c ))</errorConditionFormula>
    <errorDisplayField>leaseworks__Transaction_Currency__c</errorDisplayField>
    <errorMessage>The fields you are attempting to modify are either calculated or logic driven. These field values cannot be changed manually.</errorMessage>
</ValidationRule>