force-app/main/default/objects/leaseworks__Invoice__c/validationRules/leaseworks__CreditedInvoiceMandatoryforCreditNote.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CreditedInvoiceMandatoryforCreditNote</fullName>
    <active>false</active>
    <errorConditionFormula>false /*AND(RecordType.DeveloperName = &apos;Credit_Note&apos;,  Credited_Invoice__c = null)*/</errorConditionFormula>
    <errorMessage>Please choose an Invoice to credit.</errorMessage>
</ValidationRule>