force-app/main/default/objects/leaseworks__Invoice__c/validationRules/leaseworks__CreditNoteValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__CreditNoteValidation</fullName>
    <active>false</active>
    <description>Total Applied amount cannot be greater than Funded With amount.</description>
    <errorConditionFormula>false /*AND( OR(contains(Text(Invoice_Type__c) , &apos;Credit Note MR&apos;), contains(Text(Invoice_Type__c) , &apos;Credit Note Rent&apos;) )
  ,   Total_Applied_Amount__c &gt; Total_Funded_Amount__c 
 )*/</errorConditionFormula>
    <errorMessage>Total Applied amount cannot be greater than Funded With amount.</errorMessage>
</ValidationRule>