force-app/main/default/objects/leaseworks__Invoice__c/validationRules/leaseworks__Entity_Is_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Entity_Is_Inactive</fullName>
    <active>true</active>
    <description>To Check Entity is Inactive when Invoice is Created.</description>
    <errorConditionFormula>AND(
!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
ISNEW(),
RecordType.DeveloperName  != &#39;Deferred Sub Invoice&#39;,
leaseworks__Invoice_Deferred_From__c = Null,
leaseworks__Y_hidden_AccEnabled__c,
leaseworks__Entity__r.leaseworks__Inactive__c
)</errorConditionFormula>
    <errorDisplayField>leaseworks__Entity__c</errorDisplayField>
    <errorMessage>Unable to proceed with transactions: The lease is currently associated with an inactive entity. Please link an active entity to the lease to continue.</errorMessage>
</ValidationRule>