force-app/main/default/objects/leaseworks__Invoice__c/validationRules/leaseworks__FixedInterestRateShouldBeGreaterThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__FixedInterestRateShouldBeGreaterThanZero</fullName>
    <active>true</active>
    <description>Should not allow the user to enter negative value in Fixed Interest Rate.</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,NOT( ISNULL(leaseworks__Interest_Rate_percent__c )),leaseworks__Interest_Rate_percent__c &lt;= 0)</errorConditionFormula>
    <errorMessage>&apos;Fixed Interest Rate&apos; should be greater than 0.</errorMessage>
</ValidationRule>