force-app/main/default/objects/leaseworks__Invoice__c/validationRules/leaseworks__InvoiceMandatoryforPaymntInterestInvoice.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__InvoiceMandatoryforPaymntInterestInvoice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Interest_Invoice&apos;,  leaseworks__Unpaid_Invoice__c = null)</errorConditionFormula>
    <errorDisplayField>leaseworks__Unpaid_Invoice__c</errorDisplayField>
    <errorMessage>Please choose an Invoice to apply Interest.</errorMessage>
</ValidationRule>