force-app/main/default/objects/leaseworks__Invoice__c/validationRules/leaseworks__LoanInstallmentMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__LoanInstallmentMandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( leaseworks__Loan_Installment__c )</errorConditionFormula>
    <errorMessage>Loan installment cannot be changed/removed from the loan invoices.</errorMessage>
</ValidationRule>