force-app/main/default/objects/leaseworks__Invoice__c/validationRules/leaseworks__No_Update_On_Interest_Accounting_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__No_Update_On_Interest_Accounting_Method</fullName>
    <active>true</active>
    <description>The Accounting Method on the invoice should not be updated</description>
    <errorConditionFormula>AND( !$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c, leaseworks__Y_hidden_AccEnabled__c , 
OR(TEXT((PRIORVALUE(leaseworks__Accounting_Method__c ) )) != TEXT(leaseworks__Accounting_Method__c), TEXT((PRIORVALUE(leaseworks__MR_Accounting_Method__c ) )) != TEXT(leaseworks__MR_Accounting_Method__c), TEXT((PRIORVALUE(leaseworks__SD_Accounting_Method__c ) )) != TEXT(leaseworks__SD_Accounting_Method__c) ),
TEXT(PRIORVALUE(leaseworks__Invoice_Type__c)) == TEXT(leaseworks__Invoice_Type__c))</errorConditionFormula>
    <errorMessage>Interest, MR and SD Accounting methods cannot be manually modified on the transaction.</errorMessage>
</ValidationRule>