force-app/main/default/objects/leaseworks__Invoice__c/validationRules/leaseworks__OnlyApprovedInvoiceCredited.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__OnlyApprovedInvoiceCredited</fullName>
    <active>false</active>
    <description>Deprecated : Only Approved invoices should be credited</description>
    <errorConditionFormula>/*OR(ISPICKVAL(Credit_Applied_To__r.Status__c,&quot;Pending&quot;),
		ISPICKVAL(Credit_Applied_To__r.Status__c,&quot;Declined&quot;)	)*/false</errorConditionFormula>
    <errorMessage>Only Approved invoices can be Credited</errorMessage>
</ValidationRule>