force-app/main/default/objects/leaseworks__Invoice__c/validationRules/leaseworks__PayeePayorShouldBeLesorLessee.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PayeePayorShouldBeLesorLessee</fullName>
    <active>true</active>
    <description>The Payee on the Invoice can not be changed to anything other than Lessor on the Lease, and the Payor can not be anything other than the Lessee</description>
    <errorConditionFormula>AND(

    NOT($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c),
    leaseworks__Lease__r.RecordType.DeveloperName != &#39;Non_Lease_Agreement&#39;,
    NOT(ISBLANK(TEXT(leaseworks__Invoice_Type__c))),
    NOT(CONTAINS(TEXT(leaseworks__Invoice_Type__c), &#39;HL/SL-&#39;)),

    OR(
        AND(
            NOT(ISBLANK(PRIORVALUE(leaseworks__Rent_Pyable_To__c))),
            leaseworks__Rent_Pyable_To__c != PRIORVALUE(leaseworks__Rent_Pyable_To__c)
        ),
        AND(
            NOT(ISBLANK(PRIORVALUE(leaseworks__Rent_Payable_Frm__c))),
            leaseworks__Rent_Payable_Frm__c != PRIORVALUE(leaseworks__Rent_Payable_Frm__c)
        )
    )
)</errorConditionFormula>
    <errorMessage>The field you are attempting to modify is logic driven. This field&#39;s value cannot be changed manually.</errorMessage>
</ValidationRule>